new channel tweaks
Signed-off-by: AndrewFG <software@whitebear.ch>